# iphone-checker

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  out.json
.github/workflows/: ci.yaml
src/: main.rs
